--- a/tablecreation.html
+++ b/tablecreation.html
@@ -1,49 +1,17 @@
-<h1>COLLEGE TABLE FOR STUDENTS</h1>
-<table>
-    <tr>
-        <th>
-            S.no
-        </th>
-        <th>
-            Name
-        </th>
-        <th>
-            Register number
-        </th>
-    </tr>
-    <tr>
-        <td>
-            01
-        </td>
-        <td>
-            Simon
-        </td>
-        <td>
-            24617151
-        </td>
-    </tr>
-    <tr>
-        <td>
-            02
-        </td>
-        <td>
-            Naveen
-        </td>
-        <td>
-            24617137
-        </td>
-    </tr>
-</table>
-<ul>
-    <li>vels</li>
-    <li>saveetha</li>
-</ul>
-<ol>
-    <li>
-        hello everyone
-    </li>
-    <li>       
-         we are gonna bring back the classic
-    </li>
-</ol>
-<a href="https://calc-one-phi.vercel.app/">Click here to go to calculator</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>sample project</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+</head>
+<body>
+   <h1></h1>
+<br>
+   <center><button type="button" class="btn btn-success" id="abc" onclick="myFunction()">Success</button></center>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+<script src="sript.js"></script>
+</html>
